:pencil: Updated Resume - Fixed Contact Modal
- Updated Resume
- Contact Modal now has better styling so that the images and words don't overlap in a gross way
- Fixed some border problems with videos that was affecting Predator/Prey. This could have affects on other vidoes/figures affected by projectPage.css, but I assume it would be a positive change

--- a/stylesheets/projectPage.css
+++ b/stylesheets/projectPage.css
@@ -33,14 +33,17 @@ iframe {
     width:100%;
     height: 20rem;
     border: .5rem solid black;
+    box-sizing: border-box;
 }
 
 video {
     border: .5rem solid black;
+    box-sizing: border-box;
 }
 
 figure, figure img {
     max-width: 300px;
+    box-sizing: border-box;
 }
 
 figcaption {
